After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761674 - Restarting the app and trying to re-crop a cropped item leads to black areas
Restarting the app and trying to re-crop a cropped item leads to black areas
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
3.19.x
Other All
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2016-02-07 16:54 UTC by Debarshi Ray
Modified: 2016-02-07 19:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
base-item: Re-create the processor before processing an item (2.58 KB, patch)
2016-02-07 16:56 UTC, Debarshi Ray
committed Details | Review

Description Debarshi Ray 2016-02-07 16:54:38 UTC
Steps to reproduce:

* Crop an item
* Click 'Done'
* Restart the application
* Open the crop tool again
* The cropped out parts of the image show up as black
Comment 1 Debarshi Ray 2016-02-07 16:56:57 UTC
Created attachment 320576 [details] [review]
base-item: Re-create the processor before processing an item
Comment 2 Debarshi Ray 2016-02-07 19:06:07 UTC
From #photos on GIMPNet:

18:23 <uajain> rishi: Your patch on top of master seems to work nicely about    
      the issue reported.