base-item: Re-create the processor before processing an item

Currently, we only create the processor when loading the GeglBuffer for
an item and keep re-using it forever. However, subsequent changes to
the pipeline can change the bounding box of the graph without the
processor knowing about it.

Therefore, let's create a new processor before processing so that it
has the bounding box for the current state of the pipeline.

https://bugzilla.gnome.org/show_bug.cgi?id=761674